@@ -3,4 +3,4 @@ Description=Mathematical TeX formulas for chat windows
 Description[pl]=Matematyczne formuły TeX w oknach czat
 Author=Patryk Cisek <patryk@debian.org>
 Plugin=true
-Version=0.12.0-4
+Version=0.12.0-5
